<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_team_names"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBkndColor"
    tools:context="io.github.timladenov.sportsapp.EnterTeamNames">

    <ImageView
        android:contentDescription="@string/nameEntryBknd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/teamnamebkgrnd" />

    <EditText
        android:id="@+id/firstPlayer"
        style="@style/enterNamesView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nameFieldY"
        android:layout_centerVertical="true"
        android:hint="@string/hintA" />

    <EditText
        android:id="@+id/secondPlayer"
        style="@style/enterNamesView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nameFieldY"
        android:layout_below="@id/firstPlayer"
        android:layout_marginTop="@dimen/mainLogomarginTop"
        android:hint="@string/hintB" />

    <Button
        style="@style/buttonToMain"
        android:id="@+id/toMain"
        android:text="@string/toMain" />
</RelativeLayout>
