<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainBkndColor"
    tools:context="io.github.timladenov.sportsapp.MainActivity">

    <TextView
        style="@style/appName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weightHeight"
        android:layout_weight="@dimen/weightItem" />

    <View
        style="@style/horizontalLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <TextView
            style="@style/namesDisplay"
            android:id="@+id/TeamAName"
            android:text="@string/teamA"/>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/mainLogomarginEnd"
            android:layout_marginStart="@dimen/mainLogomarginStart"
            android:background="@color/mainTxtClr" />

        <TextView
            style="@style/namesDisplay"
            android:id="@+id/TeamBName"
            android:text="@string/teamB" />

    </LinearLayout>

    <View
        style="@style/horizontalLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <TextView
            style="@style/fieldNames"
            android:text="@string/game" />

        <TextView
            style="@style/fieldNames"
            android:text="@string/points" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/mainLogomarginEnd"
            android:layout_marginStart="@dimen/mainLogomarginStart"
            android:background="@color/mainTxtClr" />

        <TextView
            style="@style/fieldNames"
            android:text="@string/points" />

        <TextView
            style="@style/fieldNames"
            android:text="@string/game" />

    </LinearLayout>

    <View
        style="@style/horizontalLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/weightHeight"
        android:layout_weight="@dimen/weightItem"
        android:orientation="horizontal">

        <TextView
            style="@style/scoreWindows"
            android:id="@+id/teamAGames"
            android:text="@string/scoreA" />

        <TextView
            style="@style/scoreWindows"
            android:id="@+id/pointsA"
            android:text="@string/scoreA" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/mainLogomarginEnd"
            android:layout_marginStart="@dimen/mainLogomarginStart"
            android:background="@color/mainTxtClr" />

        <TextView
            style="@style/scoreWindows"
            android:id="@+id/pointsB"
            android:text="@string/scoreB" />

        <TextView
            style="@style/scoreWindows"
            android:id="@+id/teamBGames"
            android:text="@string/scoreB" />

    </LinearLayout>

    <View
        style="@style/horizontalLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/weightHeight"
        android:layout_marginBottom="@dimen/mainLogomarginTop"
        android:layout_marginEnd="@dimen/mainLogomarginEnd"
        android:layout_marginStart="@dimen/mainLogomarginStart"
        android:layout_marginTop="@dimen/mainLogomarginTop"
        android:layout_weight="@dimen/weightItem"
        android:gravity="center"
        android:background="@color/viewBkndColor"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/weightHeight"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weightItem"
            android:gravity="center">

            <Button
                style="@style/buttonStyle"
                android:id="@+id/resetScoreA"
                android:onClick="reset"
                android:text="@string/decrement" />
        </LinearLayout>

        <View
            style="@style/verticalButtonSpacer" />

        <LinearLayout
            android:layout_width="@dimen/weightHeight"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weightItem"
            android:gravity="center">

            <Button
                style="@style/buttonStyle"
                android:id="@+id/addPointsA"
                android:onClick="newResult"
                android:text="@string/addPoint" />
        </LinearLayout>

        <View
            style="@style/verticalButtonSpacer" />

        <LinearLayout
            android:layout_width="@dimen/weightHeight"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weightItem"
            android:gravity="center">

            <Button
                style="@style/buttonStyle"
                android:id="@+id/addPointsB"
                android:onClick="newResult"
                android:text="@string/addPoint" />
        </LinearLayout>

        <View
            style="@style/verticalButtonSpacer" />

        <LinearLayout
            android:layout_width="@dimen/weightHeight"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weightItem"
            android:gravity="center">

            <Button
                style="@style/buttonStyle"
                android:id="@+id/resetScoreB"
                android:onClick="reset"
                android:text="@string/decrement" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
